SERVER-42330